change bug with imposition mobile menu on head text; add logo-sign;

--- a/recourses/css/queries.css
+++ b/recourses/css/queries.css
@@ -79,6 +79,7 @@
 
     .main-nav li {
         display: block;
+        margin-left: 20px;
     }
 
     .main-nav li a:link, 
@@ -164,6 +165,16 @@
 @media only screen and (max-width: 480px) {
     section { padding: 25px 0; }
     .contact-form { width: 100%; }
+
+    .logo-min { display: none; }
+    .logo-sign { 
+        display: block; 
+        margin-top: 20px;
+    }
+
+    .main-nav li {
+        font-size: 80%;
+    }
 
     .meals-showcase { 
         -webkit-box-orient: vertical; 
